Clock now stop and starts based on the other one starting or stopping

--- a/main.css
+++ b/main.css
@@ -73,7 +73,7 @@
 }
 
 .actual-buttons{
-    background-color: rgb(187, 187, 187); /* Green */
+    background-color: whitesmoke;
     border: none;
     color: black;
     padding: 15px 32px;
