--- a/main.css
+++ b/main.css
@@ -62,8 +62,17 @@
     min-height: 10vh;
     color: chocolate; 
     text-align:center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
     font-size: 2em;
+
+    /* font-family: 'Maven Pro', sans-serif; */
+    font-family: 'Comfortaa', cursive;
+    /* font-family: 'Catamaran', sans-serif; */
+    /* font-family: 'Francois One', sans-serif; */
+
+    margin: 1em;
+
+
 }
 
 .button-panels{
