Made a note after tracking something down in the css

--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
     background-color: cream;
 }
 #first{
+    /*This is affecting the actual time display*/
     /* width: 50%; */
    
     /* float: left; */
